feat: last version of api with spring boot

--- a/spring/src/main/resources/application.properties
+++ b/spring/src/main/resources/application.properties
@@ -1,7 +1,11 @@
 spring.application.name=spring
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.hibernate.show-sql=true
+spring.datasource.driverClassName=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/dbpostgres
 spring.datasource.username=userpostgres
 spring.datasource.password=admin
+spring.jpa.defer-datasource-initialization=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl=true
+spring.jpa.hibernate.show-sql=true
+
